--- a/package.json
+++ b/package.json
@@ -6,13 +6,6 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@reduxjs/toolkit": "^1.5.0",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^12.7.1",
-    "@types/jest": "^26.0.20",
-    "@types/node": "^12.20.1",
-    "@types/react": "^17.0.2",
-    "@types/react-dom": "^17.0.1",
     "fp-ts": "^2.9.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -21,6 +14,16 @@
     "redux": "^4.0.5",
     "typescript": "^4.1.5",
     "web-vitals": "^1.1.0"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
+    "@testing-library/user-event": "^12.7.1",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^12.20.1",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1",
+    "@types/react-redux": "^7.1.16"
   },
   "scripts": {
     "start": "react-scripts start",
